--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "openai": "^4.24.7"
   }
 }
